--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
                     <h3>Turismo</h3>
                     <p>Excursões, passeios e viagens com conforto e segurança. Atendemos grupos, escolas e empresas.</p>
                 </div>
-                <img src="static/imagens/Onibus1.png" alt="Turismo" />
+                <img src="static/imagens/onibus1.png" alt="Turismo" />
             </div>
             <div class="servico">
                 <div class="servico-texto">
                     <h3>Fretamento Empresarial</h3>
                     <p>Transporte eficiente para colaboradores com pontualidade e economia para sua empresa.</p>
                 </div>
-                <img src="static/imagens/Van.png" alt="Fretamento" />
+                <img src="static/imagens/van.png" alt="Fretamento" />
             </div>
         </section>
 
