--- a/index.html
+++ b/index.html
@@ -15,15 +15,7 @@
     <link rel="stylesheet" href="static/CSS/style.css" />
   </head>
   <body>
-    <header
-      class="bg-dark text-white py-4"
-      style="
-        background-image: url('static/imagens/fundo_header.png');
-        background-size: cover;
-        background-position: center;
-        height: 80vh;
-      "
-    >
+    <header class="bg-dark text-white py-4 custom-header">
       <div class="container">
         <div
           class="d-flex justify-content-between align-items-center flex-wrap"
